--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-    <header class="p-3 text-bg-dark">
+    <header class="p-3">
         <div class="">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><button type="button" class="btn" id="help">Help</button></li>
-                    <li><button type="button" class="btn" id="lang">Language</button></li>
+                    <!-- <li><button type="button" class="btn" id="help">Help</button></li>
+                    <li><button type="button" class="btn" id="lang">Language</button></li> -->
                 </ul>
             </div>
         </div>
@@ -26,7 +26,7 @@
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Your AI Twin</p>
         </div>
-        <div class="container px-4 py-3 border">
+        <div class="container px-4 py-3">
           <div class="scrollable-container text-start" id="response">
           </div>
         </div>
@@ -39,9 +39,9 @@
             </div>
         </div>
     </div>
-    <footer class="footer mt-auto py-3 bg-body-tertiary fixed-bottom">
+    <footer class="footer mt-auto py-3 fixed-bottom">
         <div class="nav justify-content-center py-1">
-            <p class="my-0">Futago Project made for Hackathon @SUMMER</p>
+            <p class="my-0">Futago Project made for Hackathon ©SUMMER</p>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
