--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Futago</title>
+    <link rel="shortcut icon" href="../static/futago-icon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
@@ -26,11 +27,11 @@
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Your AI Twin</p>
         </div>
-        <div class="container px-4 py-3">
+        <div class="container px-4 py-3 col-lg-6 mx-auto">
           <div class="scrollable-container text-start" id="response">
           </div>
         </div>
-        <div class="px-4 py-5 text-center" id="prompt">
+        <div class="container px-4 py-5 text-center" id="prompt">
             <div class="col-lg-6 mx-auto">
                 <div class="form-floating">
                     <input type="prompt" class="form-control" id="promptInput" placeholder="">
