--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
           <div class="scrollable-container text-start" id="response">
           </div>
         </div>
-        <div class="container px-4 py-5 text-center" id="prompt">
+        <div class="px-4 py-5 text-center" id="prompt">
             <div class="col-lg-6 mx-auto">
                 <div class="form-floating">
                     <input type="prompt" class="form-control" id="promptInput" placeholder="">
