--- a/templates/index.html
+++ b/templates/index.html
@@ -28,10 +28,10 @@
             <p class="lead mb-4">Your AI Twin</p>
         </div>
         <div class="container px-4 py-3 col-lg-6 mx-auto">
-          <div class="scrollable-container text-start" id="response">
-          </div>
+            <div class="scrollable-container text-start" id="response">
+            </div>
         </div>
-        <div class="container px-4 py-5 text-center" id="prompt">
+        <div class="px-4 py-5 text-center" id="prompt">
             <div class="col-lg-6 mx-auto">
                 <div class="form-floating">
                     <input type="prompt" class="form-control" id="promptInput" placeholder="">
